--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-pizza",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vitalyam.github.io/react-pizza/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -27,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "npx json-server --watch public/db.json --port=3001",
+    "server": "json-server --watch public/db.json --port=3001",
     "deploy": "gh-pages -d build",
     "predeploy": "npm run build"
   },
