--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch public/db.json --port=3001",
-    "deploy": "gh-pages -d build",
-    "predeploy": "npm run build"
+    "server": "node server.js",
+    "json-server": "json-server --watch public/db.json --port=3001"
   },
   "eslintConfig": {
     "extends": [
